<resources>

    <string name="app_name">BVRITH SVESQBank</string>
    <string name="title">SVES Question Bank</string>

    <string name="login_username">Login Mail ID</string>
    <string name="button_login">Login</string>
    <string name="login_pwd">Password</string>
    <string name="login_forgotpwd">Forgot Password</string>
    <string name="login_resetpwd">Reset Password</string>
    <string name="button_signup">Create Account</string>

    <string name="signup_fullname">Full Name</string>
    <string name="signup_rollno">Roll Number / Faculty ID</string>
    <string name="signup_clg_prompt">Choose College</string>
    <string-array name="signup_clg">
        <item>BVRITH</item>
        <item>SVECW</item>
        <item>VIT</item>
        <item>BVRITN</item>
        <item>SBSP</item>
    </string-array>
    <string name="signup_role_prompt">Choose Role</string>
    <string-array name="signup_role">
        <item>Student</item>
        <item>Faculty</item>
        <item>Principal/Director</item>
    </string-array>
    <string name="signup_email">Mail ID</string>
    <string name="signup_mobile">Mobile Number</string>
    <string name="dept_prompt">Choose Dept</string>
    <string-array name="dept_list">
        <item>CSE/IT</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>MCA</item>
    </string-array>
    <string name="signup_sec_prompt">Choose Section</string>
    <string-array name="signup_sec">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string name="signup_uname">Login Mail ID</string>
    <string name="signup_pwd">Password</string>
    <string name="button_fetch_que">Get Questions</string>

    <string name="subj_prompt">Choose Subject</string>
    <string name="unit_prompt">Choose Unit</string>
    <string-array name="unit_list">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="level_prompt">Choose Level</string>
    <string-array name="level_list">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="welcome_uname">Hello,</string>
    <string name="logout">Logout</string>
    <string name="button_clear">Clear</string>
    <string name="button_create">Create</string>
    <string name="button_submit">Submit</string>

    <string name="text_error_msg">Field cannot be empty</string>
    <string name="email_error_msg">Invalid Email ID</string>
    <string name="pwd_error_msg">Password does not match</string>

    <string name="resetpwd_reset">Reset</string>

    <string name="pwd_new">New Password</string>
    <string name="pwd_confirm">Confirm Password</string>

</resources>
