<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignupActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="383dp"
            android:layout_height="575dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent" android:gravity="center"
            android:padding="25dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="TextView"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content" android:id="@+id/textView_uname"
                    tools:text="@string/welcome_uname" android:editable="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_logout"
                    android:text="@string/logout" android:clickable="true"
                    android:focusable="true"/>
        </LinearLayout>

        <!--<Spinner-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" android:id="@+id/fetch_que_dept"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:spinnerMode="dialog"-->
                <!--android:entries="@array/dept_list"-->
                <!--android:prompt="@string/dept_prompt"/>-->
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dept_prompt"
                android:layout_marginTop="8dp">

            <AutoCompleteTextView
                    android:id="@+id/fetch_que_dept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--<Spinner-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" android:id="@+id/fetch_que_subj"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:spinnerMode="dialog"-->
                <!--android:prompt="@string/subj_prompt"/>-->
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subj_prompt"
                android:layout_marginTop="8dp">

            <AutoCompleteTextView
                    android:id="@+id/fetch_que_subj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--<Spinner-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" android:id="@+id/fetch_que_level"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:spinnerMode="dialog"-->
                <!--android:entries="@array/level_list"-->
                <!--android:prompt="@string/level_prompt"/>-->
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/level_prompt"
                android:layout_marginTop="8dp">

            <AutoCompleteTextView
                    android:id="@+id/fetch_que_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:text="@string/button_fetch_que"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_fetch_que"
                android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>