<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.activities.MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="412dp"
            android:layout_height="576dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center" android:padding="25dp">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:id="@+id/editText_login_username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_pwd"
                    android:id="@+id/editText_login_pwd"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp">
            <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/button_login_cancel"
                    android:text="@string/button_cancel"
                    app:iconPadding="2dp"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/ic_cancel_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <Button
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/button_login"
                    android:text="@string/button_login"
                    app:iconPadding="2dp"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/ic_done_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_login_forgotpwd"
                    android:layout_weight="1"
                    android:text="@string/login_forgotpwd"
                    android:clickable="true"
                    android:focusable="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_login_resetpwd"
                    android:layout_weight="1"
                    android:text="@string/login_resetpwd"
                    android:clickable="true"
                    android:focusable="true"/>
        </LinearLayout>
        <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"/>
        <Button
                style="@style/Widget.MaterialComponents.Button"
                app:iconPadding="2dp"
                app:cornerRadius="16dp"
                android:text="@string/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_signup"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>