<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".ui.activities.ForgotPassword">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:layout_marginBottom="@dimen/_32sdp">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/signup_uname"
                            android:id="@+id/editText_forgotpwd_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/forgotpwd_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/pwd_new"
                            android:id="@+id/editText_forgotpwd_pwd"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/forgotpwd_text_input_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/pwd_confirm"
                            android:id="@+id/editText_forgotpwd_pwd_confirm"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_below="@+id/editText_forgotpwd_pwd_confirm"
                        android:layout_marginTop="@dimen/_7sdp">

                    <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:id="@+id/button_forgotpwd_clear"
                            android:text="@string/button_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:iconPadding="2dp"
                            app:cornerRadius="16dp"
                            app:icon="@drawable/ic_cancel_black_24dp"/>

                    <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button"
                            android:id="@+id/button_forgotpwd_submit"
                            android:text="@string/button_submit"
                            android:layout_toEndOf="@+id/button_forgotpwd_clear"
                            android:layout_toRightOf="@+id/button_forgotpwd_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:iconPadding="2dp"
                            app:cornerRadius="16dp"
                            app:icon="@drawable/ic_done_black_24dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>